<resources>
    <string name="app_name">תפילות קצרות וסגולות</string>
    <string name="action_settings">הגדרות</string>
    <string name="Increase_Size_text">הגדל כתב</string>
    <string name="Decrease_size_text">הקטן כתב</string>
	<string name="bgColorBlack_button">לרקע שחור</string>
	<string name="bgColorWhite_button">לרקע לבן</string>
	<string name="Remind_me">הזכר לי שוב</string>
    <string-array name="fonts">
        <item>דויד</item>
        <item>פשוט</item>
        <item>קומיקס מס\' 2</item>
        <item>כתב סתם</item>
        <item>טרשים</item>
    </string-array>
	<string name="size_all_text">גודל הכתב</string>
	<string name="night_mode">מצב לילה - אותיות לבנות על כתב שחור</string>
	<string name="ok">אישור</string>
	<string name="cancel">ביטול</string>
	<string name="simpleText">
	    
	    לְכוּ נְרננה לַאֲדֹנָי, נָריעה לְצוּר יִשָׁעֲנוּ. נְקַדְמָה פָנָיו בְּתוֹדָה בִּזְמִירוֹת נָריעַ לוֹ. כִּי אֵל גָּדוֹל אֲדֹנָי וּמֶלך גָּדוֹל עַל כָּל אֱלֹהִים.
	 
</string>
    <string name="text_title_button1">שְׁלֹשָׁה עָשָׂר עִקָּרִים</string>
    <string name="text_contain_button1">
       		    הֲרֵינִי מַאֲמִין בֶּאֱמוּנָה שְׁלֵמָה בִּשְׁלֹשָׁה עָשָׂר עִקָּרִים שֶׁל הַתּוֹרָה הַקְּדוֹשָׁה.\n
				א) שֶׁהַקָּדוֹשׁ בָּרוּךְ הוּא נִמְצָא וּמַשְׁגִּיחַ.\n
				ב) וְהוּא אֶחָד.\n
				ג) וְאֵינוֹ גוּף וְאֵין לוֹ דְמוּת הַגּוּף.\n
				ד) וְהוּא קַדְמוֹן לְכָל-קְדוּמִים.\n
				ה) וְאֵין עֲבוֹדָה לְזוּלָתוֹ.\n
				ו) וְיוֹדֵעָ מַחְשְׁבוֹת בְּנֵי אָדָם.\n
				ז) וּנְבוּאַת מֹשֶׁה רַבֵּנוּ עָלָיו הַשָּׁלוֹם אֶמֶת.\n
				ח) וְשֶׁמֹשׁה רָבֵּנוּ הוּא אָדוֹן לְכָל-הָנְּבִיאִים.\n
				ט) וְשֶׁהַתּוֹרָה כֻלָּה נְתוּנָה מִן הַשָּׁמָיִם.\n
				י) וְשֶׁלֹּא תִּשְׁתַּנֶּה בְשּׁוּם זְמַן חַס וְשָׁלוֹם.\n
				יא) וְשֶׁהַקָּדוֹשׁ בַָּרוּךְ הוּא מַעֲנִישׁ לֳרְשָׁעִים וּמְשַׁלֵּם שָׂכָר טוֹב לַצַּדִּיקִים.\n
				יב) וְשֶׁיָּבֹא מֶלֶךְ הַמָּשִׁיחָ בִּמְהֵרָה בְיָמֵינוּ.\n
				יג) וְשֶׁהַקָּדוֹשׁ בָּרוּךְ הוּא עָתִיד לְהַחֲיוֹת אֶת הַמֵּתִים.\n\n
				יְהִי רָצוֹן מִלְּפָנֶיךָ ה\' אֱלֹהֵינוּ וֵאֹלֹהֵי אֲבוֹתֵינוּ, שֶׁתָּכֹף יִצְרֵנוּ לַעֲבוֹדָתֶךָ כָּל-יְמֵי חַיֵּינוּ תָּמִיד, אָמֵן כֵּן יְהִי רָצוֹן.  
				 </string>
	<string name="text_title_button2">עֶשֶׂר זְכִירוֹת</string>
    <string name="text_contain_button2">
       		    יש להשתדל לומר עשר זכירות בכל יום, שבזה מקיים כמה מצוות עשה מן התורה, ברגעים אחדים, ויאמרם לאט ובהתבוננות.\n\n
				לְשֵׁם יִחוּד קֻדְשָׁא בְרִיך הוּא וּשְׁכִינְתֵּה, הֲרֵינִי בָא לְקַיֵּם מִצְוַת עֶשֶׂר זְכִירוֹת שֶׁיֵּשׁ לִזְכּוֹר בְּכָל יוֹם, וְאֵלוּ הֵן:\n\n
				א. יְצִיאַת מִצְרָיִם.\n
				ב. הַשַּׁבָּת.\n
				ג. הַמָּן.\n
				ד. מַעֲשֵׂה עֲמָלֵק הָרָשָׁע.\n
				ה. מַעֲמַד הַר סִינָי.\n
				ו. מַה שֶׁהִקְצִיפוּ אֲבוֹתֵינוּ לַקָּדוֹש בָּרוּך הוּא בַּמִּדְבָּר וּבִפְרָט בָעֵגֶל.\n
				ז. מַה שֶיָעֲצוּ בָלָק וּבִלְעָם לַעֲשׂוֹת לַאֲבוֹתֵינוּ לְמַעַן דַעַת צִדְקוֹת ה\'.\n
				ח. מַעֲשֵׂה מִרְיָם הַנְּבִיאָה.\n
				ט. מִצְוַת וְזָכַרְתָּ אֶת ה\' אֱלֹהֶיךָ כִּי הוּא הַנּוֹתֵן לְךָ כּח לַעֲשׂוֹת חַָיִל.\n
				י. וּזְכִירַת יְרוּשָלַיִם, תִּבָּנֶה וְתִכּוֹנֵן בִּמְהֵרָה בְיָמֵינוּ, אָמֵן.\n
    			</string>
    <string name="text_title_button3">ברכת תודה לאלוהים</string>
    <string name="text_contain_button3">
       		    מלך מלכי המלכים,אדון עולם,ריבונו של עולם.\n

				תודה!\n
				
				תודה, שאני עומד/ת כאן לפניך ומודה לך, וכל מה שאתה וכל מה שאומר יהיה כאין וכאפס לעומת כמה שאני באמת צריכ/ה להודות לך. הרי על הכל אני צריכ/ה להודות לך.\n
				כי הכל ממך, הכל נתת לי בחן, בחסד וברחמים.\n
				תודה, על כל הדברים בעולם.\n
				תודה, על רוב רבי רבבות פעמים שעזרת לי, תמכת בי, הושעת אותי, הצלת אותי, שימחת אותי, ריפאת אותי, שמרת עליי, עודדת אותי.\n
				תודה, שאתה איתי תמיד.\n
				תודה, שאתה נותן לי כוח לעשות מצוות, כוח לעשות מעשים טובים, כוח להתפלל.\n
				תודה, על כל הפעמים שעזרת ולא ידעתי להגיד תודה.\n
				תודה, על החסדים שאתה עושה עימי, בכל רגע ורגע.\n
				תודה, על כל נשימה ונשימה שאני נושמ/ת.\n
				תודה, לך מלך מלכי המלכים, גם על כל הדברים שאין לי, תודה שקשה לי לפעמים, תודה שקצת עצוב לי לפעמים, כי הכל לטובתי, ואפילו אם לא תמיד ראיתי שזה לטובתי, עמוק בלב אני יודע/ת שכל מה שמגיע ממך אבא ריבון עולם - הוא הדבר הטוב עבורי, והוא נעשה במיוחד בשבילי, בהשגחה פרטית מדוייקת ומושלמת, כמו שרק מלך מלכי המלכים יכול לעשות.\n
				תודה, שלפעמים קשה לי, כי רק כך אני יודע/ת להעריך את הטוב. רק אחרי שנמצאים בחושך, אפשר להעריך את האור.\n
				תודה, על החיים הנפלאים שנתת לי.\n
				תודה על הדבר הכי קטן שיש לי, כי את הכל אתה נתת לי, ולא אף אחד אחר.\n
				תודה, שאתה תמיד שומע את התפילות שלי, ושל עם ישראל.\n
				
				בורא עולם, אני מבקש/ת ממך סליחה ממעמקי ליבי אם היו פעמים שלא הערכתי את מה שנתת לי ובמקום לומר לך תודה רק התלוננתי. אנא אל תירחק ממני לעולם, אני עפר ואפר ואתה כל העולם.\n
    			</string>
     <string name="text_title_button4">ברכות התורה</string>
     <string name="text_contain_button4">
       		    בָּרוּךְ אַתָּה ה\', אֱלהֵינוּ מֶלֶךְ הָעולָם, אֲשֶׁר קִדְּשָׁנוּ בְּמִצְותָיו וְצִוָּנוּ עַל דִּבְרֵי תורָה: \n
				וְהַעֲרֵב נָא ה\' אֱלהֵינוּ אֶת דִּבְרֵי תורָתְךָ בְּפִינוּ וּבְפִיפִיּות עַמְּךָ בֵּית יִשְׂרָאֵל. וְנִהְיֶה אֲנַחְנוּ וְצֶאֱצָאֵינוּ וְצֶאֱצָאֵי צֶאֱצָאֵינוּ כֻּלָּנוּ יודְעֵי שְׁמֶךָ וְלומְדֵי תורָתְךָ לִשְׁמָהּ. בָּרוּךְ אַתָּה ה\', הַמְלַמֵּד תּורָה לְעַמּו יִשְׂרָאֵל:\n
				בָּרוּךְ אַתָּה ה\', אֱלהֵינוּ מֶלֶךְ הָעולָם, אֲשֶׁר בָּחַר בָּנוּ מִכָּל הָעַמִּים וְנָתַן לָנוּ אֶת תּורָתו. בָּרוּךְ אַתָּה ה\', נותֵן הַתּורָה: \n
				וַיְדַבֵּר ה\' אֶל משֶׁה לֵּאמר: \n
				דַּבֵּר אֶל אַהֲרן וְאֶל בָּנָיו לֵאמר כּה תְבָרְכוּ אֶת בְּנֵי יִשְׂרָאֵל. אָמור לָהֶם: \n
				יְבָרֶכְךָ ה\' וְיִשְׁמְרֶךָ: \n
				יָאֵר ה\' פָּנָיו אֵלֶיךָ וִיחֻנֶּךָּ: \n
				יִשָּׂא ה\' פָּנָיו אֵלֶיךָ וְיָשֵׂם לְךָ שָׁלום: \n
				וְשָׂמוּ אֶת שְׁמִי עַל בְּנֵי יִשְׂרָאֵל וַאֲנִי אֲבָרְכֵם:\n
    			</string>
	 <string name="text_contain_hide_button4">
       		    מודֶה / מודָה / אֲנִי לְפָנֶיךָ מֶלֶךְ חַי וְקַיָּם, שֶׁהֶחֱזַרְתָּ בִּי נִשְׁמָתִי בְּחֶמְלָה, רַבָּה אֱמוּנָתֶךָ:\n\n
				בָּרוּךְ אַתָּה ה\', אֱלהֵינוּ מֶלֶךְ הָעולָם, אֲשֶׁר קִדְּשָׁנוּ בְּמִצְותָיו וְצִוָּנוּ עַל נְטִילַת יָדַיִם:\n\n
				בָּרוּךְ אַתָּה ה\', אֱלהֵינוּ מֶלֶךְ הָעולָם, אֲשֶׁר יָצַר אֶת הָאָדָם בְּחָכְמָה. וּבָרָא בו נְקָבִים נְקָבִים. חֲלוּלִים חֲלוּלִים. גָּלוּי וְיָדוּעַ לִפְנֵי כִסֵּא כְבודֶךָ שֶׁאִם יִסָּתֵם אֶחָד מֵהֶם או אִם יִפָּתֵחַ אֶחָד מֵהֶם אֵי אֶפְשַׁר לְהִתְקַיֵּם אֲפִלּוּ שָׁעָה אֶחָת. בָּרוּךְ אַתָּה ה\', רופֵא כָל בָּשָׂר וּמַפְלִיא לַעֲשׂות:\n\n
				אֱלהַי. נְשָׁמָה שֶׁנָּתַתָּ בִּי טְהורָה. אַתָּה בְרָאתָהּ. אַתָּה יְצַרְתָּהּ. אַתָּה נְפַחְתָּהּ בִּי. וְאַתָּה מְשַׁמְּרָהּ בְּקִרְבִּי. וְאַתָּה עָתִיד לִטְּלָהּ מִמֶּנִּי וּלְהַחֲזִירָהּ בִּי לֶעָתִיד לָבא. כָּל זְמַן שֶׁהַנְּשָׁמָה בְקִרְבִּי מודֶה אֲנִי לְפָנֶיךָ ה\' אֱלהַי וֵאלהֵי אֲבותַי רִבּון כָּל הַמַּעֲשִׂים. אֲדון כָּל הַנְּשָׁמות. בָּרוּךְ אַתָּה ה\', הַמַּחֲזִיר נְשָׁמות לִפְגָרִים מֵתִים:\n\n
				בָּרוּךְ אַתָּה ה\', אֱלהֵינוּ מֶלֶךְ הָעולָם, הַנּותֵן לַשֶּׂכְוִי בִּינָה לְהַבְחִין בֵּין יום וּבֵין לָיְלָה: \n\n
				בָּרוּךְ אַתָּה ה\', אֱלהֵינוּ מֶלֶךְ הָעולָם, פּוקֵחַ עִוְרִים: \n\n
				בָּרוּךְ אַתָּה ה\', אֱלהֵינוּ מֶלֶךְ הָעולָם, מַתִּיר אֲסוּרִים: \n\n
				בָּרוּךְ אַתָּה ה\', אֱלהֵינוּ מֶלֶךְ הָעולָם, זוקֵף כְּפוּפִים: \n\n
				בָּרוּךְ אַתָּה ה\', אֱלהֵינוּ מֶלֶךְ הָעולָם, מַלְבִּישׁ עֲרֻמִּים: \n\n
				בָּרוּךְ אַתָּה ה\', אֱלהֵינוּ מֶלֶךְ הָעולָם, הַנּותֵן לַיָּעֵף כּחַ: \n\n
				בָּרוּךְ אַתָּה ה\', אֱלהֵינוּ מֶלֶךְ הָעולָם, רוקַע הָאָרֶץ עַל הַמָּיִם:\n\n
				בָּרוּךְ אַתָּה ה\', אֱלהֵינוּ מֶלֶךְ הָעולָם, הַמֵּכִין מִצְעֲדֵי גָבֶר: \n\n
				בָּרוּךְ אַתָּה ה\', אֱלהֵינוּ מֶלֶךְ הָעולָם, שֶׁעָשָׂה לִי כָּל צָרְכִּי: \n\n
				בָּרוּךְ אַתָּה ה\', אֱלהֵינוּ מֶלֶךְ הָעולָם, אוזֵר יִשְׂרָאֵל בִּגְבוּרָה: \n\n
				בָּרוּךְ אַתָּה ה\', אֱלהֵינוּ מֶלֶךְ הָעולָם, עוטֵר יִשְׂרָאֵל בְּתִפְאָרָה: \n\n
				בָּרוּךְ אַתָּה ה\', אֱלהֵינוּ מֶלֶךְ הָעולָם, שֶׁלּא עָשַׂנִי גוי. (האשה אומרת - גויָה):\n\n
				בָּרוּךְ אַתָּה ה\', אֱלהֵינוּ מֶלֶךְ הָעולָם, שֶׁלּא עָשַׂנִי עָבֶד. (האשה אומרת - שִׁפְחָה):\n\n
				בָּרוּךְ אַתָּה ה\', אֱלהֵינוּ מֶלֶךְ הָעולָם, שֶׁלּא עָשַׂנִי אִשָּׁה: \n\n
				(אשה אומרת בלי שם ומלכות - בָּרוּךְ שֶׁעָשַׂנִי כִּרְצונו): \n\n
				בָּרוּךְ אַתָּה ה\', אֱלהֵינוּ מֶלֶךְ הָעולָם, הַמַּעֲבִיר חֶבְלֵי שֵׁנָה מֵעֵינַי וּתְנוּמָה מֵעַפְעַפָּי:\n\n 
				וִיהִי רָצון מִלְּפָנֶיךָ ה\' אֱלהַי וֵאלהֵי אֲבותַי, שֶׁתַּרְגִּילֵנִי בְּתורָתֶךָ. וְתַדְבִּיקֵנִי בְּמִצְותֶיךָ. וְאַל תְּבִיאֵנִי לִידֵי חֵטְא. וְלא לִידֵי עָון. וְלא לִידֵי נִסָּיון. וְלא לִידֵי בִזָּיון. וְתַרְחִיקֵנִי מִיֵּצֶר הָרָע. וְתַדְבִּיקֵנִי בְּיֵצֶר הַטּוב. וְכוף אֶת יִצְרִי לְהִשְׁתַּעְבֶּד לָךְ. וּתְנֵנִי הַיּום וּבְכָל יום לְחֵן וּלְחֶסֶד וּלְרַחֲמִים בְּעֵינֶיךָ וּבְעֵינֵי כָל רואַי. וְגָמְלֵנִי חֲסָדִים טובִים. בָּרוּךְ אַתָּה ה\', גּומֵל חֲסָדִים טובִים לְעַמּו יִשְׂרָאֵל:\n\n 
				יְהִי רָצון מִלְּפָנֶיךָ ה\' אֱלהַי וֵאלהֵי אֲבותַי שֶׁתַּצִּילֵנִי הַיּום וּבְכָל יום וָיום מֵעַזֵּי פָנִים. וּמֵעַזּוּת פָּנִים. מֵאָדָם רָע. מִיֵּצֶר רָע. מֵחָבֵר רָע. מִשָּׁכֵן רָע. מִפֶּגַע רָע. מֵעַיִן הָרָע. וּמִלָּשׁון הָרָע. מִדִּין קָשֶׁה. וּמִבַּעַל דִּין קָשֶׁה. בֵּין שֶׁהוּא בֶן בְּרִית. וּבֵין שֶׁאֵינו בֶן בְּרִית:\n\n
    			</string>
	  <string name="text_title_button5">תיקון הכללי</string>
</resources>