<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout_bg_button_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="right" 
    android:paddingLeft="15dp"
    android:paddingTop="15dp"
    android:paddingRight="15dp">

    <TableLayout 
         android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:orientation="horizontal"  >
       
        <TableRow>
             <Spinner
		        android:id="@+id/spinnerfont"
		        android:layout_weight="0.7"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" />
             
            <TextView
		        android:id="@+id/textfonts_setting"
		        android:textAlignment="center"
		        android:layout_weight="0.3"
		        android:textSize="20sp"
		        android:layout_width="match_parent"
		        android:layout_height="70dp"
		        android:text="@string/fonts" />
            
        </TableRow>
       
        <TableRow >
                <ScrollView 
		        android:layout_width="wrap_content"
			    android:layout_height="150dp"
			    android:padding="12dp"
			    >
		        
				    <LinearLayout 
				    android:layout_width="match_parent"
				    android:layout_height="match_parent"
				    android:orientation="vertical"
				    android:id="@+id/linearLayout2_bg_button_setting"
				     >
				            <TextView
				                android:id="@+id/textsimple2_setting"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:textSize="20sp"
				                android:layout_gravity="right"
				                android:textDirection="anyRtl"
				                android:text="דוגמה לגופן של טקסט:" />
						    <TextView
				                android:id="@+id/textsimple_setting"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:textSize="20sp"
				                android:textDirection="anyRtl"
				                android:text="@string/simpleText" />
		    		</LinearLayout>
 
 			</ScrollView>
        </TableRow>
        
        <TableRow >

             <Spinner
		        android:id="@+id/spinnersizes"
		        android:layout_weight="0.7"
		        android:layout_width="match_parent"
		        android:layout_height="70dp" />
             
             <TextView
		        android:id="@+id/textsizes_setting"
		        android:textAlignment="center"
		        android:textSize="20sp"
		        android:layout_weight="0.3"
		        android:layout_width="match_parent"
		        android:layout_height="70dp"
		        android:text="@string/size_all_text" />
	
	   
            
        </TableRow>
        
        <TableRow >
            
             <TextView
		        android:id="@+id/text_view_toggleButton"
		        android:layout_marginTop="5dp"
		        android:layout_weight="2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textAlignment="center"
		        android:textSize="17sp"
		        android:layout_gravity="center_vertical"
		        android:text="@string/night_mode" />
             
             <ToggleButton
		        android:id="@+id/night_mode_setting"
		        android:layout_marginTop="5dp"
		        android:layout_weight="1"
		        android:layout_width="80dp"
		        android:layout_height="60dp"
		        android:textOn="דלוק"
		        android:textOff="כבוי" />
		
        </TableRow>
        
    </TableLayout>

    
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="bottom"
    >
    
    <Button
        android:id="@+id/button_Cancel"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/button_OK"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/ok" />
    
</LinearLayout>

</LinearLayout>
